# pytest-ticket

./: pyproject.toml  readme.md  tox.ini
.github/workflows/: ci.yml
pytest_ticket/: __init__.py
tests/: test_init.py  test_plugin.py  test_pytest_output.py
